# grpc-web

./: MODULE.bazel  docker-compose.yml
javascript/net/grpc/web/generator/: grpc_generator.cc
net/grpc/gateway/docker/prereqs/: Dockerfile
net/grpc/gateway/docker/ts_client/: Dockerfile
net/grpc/gateway/docker/ts_prereqs/: Dockerfile
net/grpc/gateway/examples/echo/: BUILD.bazel
net/grpc/gateway/examples/echo/ts-example/: client.ts  package.json  tsconfig.json
scripts/: docker-run-mocha-tests.sh  test-proxy.sh
src/typescript/: abstractclientbase.ts  authutil.ts  clientoptions.ts  clientreadablestream.ts  clientunarycallimpl.ts  dockerfile.ts  generictransportinterface.ts  grpcwebclientbase.ts  grpcwebclientbase_test.ts  grpcwebclientreadablestream.ts  grpcwebstreamparser.ts  grpcwebstreamparser_test.ts  interceptor.ts  metadata.ts  methoddescriptor.ts  methoddescriptorinterface.ts  methodtype.ts  request.ts  requestinternal.ts  rpcerror.ts  status.ts  statuscode.ts  statuscode_test.ts  streambodyclientreadablestream.ts  tsconfig.json  unaryresponse.ts  unaryresponseinternal.ts
src/typescript/proto/: status.proto
