"""
A bazel module for the grpc-web project.

Visit https://grpc.io/ and https://github.com/grpc/grpc-web for
more information about the project.
"""

module(
    name = "grpc-web",
    version = "2.0.2",
    repo_name = "com_github_grpc_grpc_web",
)

bazel_dep(name = "protobuf", version = "29.1", repo_name = "com_google_protobuf")
bazel_dep(name = "grpc", version = "1.65.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "rules_cc", version = "0.2.17")
